--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/forms": "^0.5.6",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/chart.js": "^2.9.38",
 		"autoprefixer": "^10.4.15",
 		"less": "^4.2.0",
 		"postcss": "^8.4.29",
@@ -28,6 +29,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"chart.js": "^2.7.3",
+		"d3": "^7.8.5",
+		"d3-axis": "^3.0.0",
+		"d3-selection": "^3.0.0",
+		"d3-time-format": "^4.1.0",
 		"three": "^0.157.0",
 		"threejs-toys": "^0.0.8"
 	}
